add: java 11 compatibility